style(lint): fix linting

--- a/src/app/test-executions/test-executions.component.html
+++ b/src/app/test-executions/test-executions.component.html
@@ -93,7 +93,7 @@
       title="{{ 'TESTEXECUTIONPAGE.EMPTYSTATE_NOTESTRUNS_TITLE' | translate }}"
       description="{{ 'TESTEXECUTIONPAGE.EMPTYSTATE_NOTESTRUNS_DESCRIPTION' | translate }}"
       buttonText="{{ 'TESTEXECUTIONPAGE.EMPTYSTATE_CREATETESTRUN_BUTTON' | translate }}"
-      (click)="onAdd();">
+      (clicked)="onAdd();">
     </app-empty-state>
   </ng-template>
 
