fix(management): fix typo

--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -45,7 +45,7 @@
       title="{{ 'TESTMANAGEMENTPAGE.EMPTYSTATE_NOTESTSUITES_TITLE' | translate }}"
       description="{{ 'TESTMANAGEMENTPAGE.EMPTYSTATE_NOTESTSUITES_DESCRIPTION' | translate }}"
       buttonText="{{ 'TESTMANAGEMENTPAGE.EMPTYSTATE_CREATETESTSUITE_BUTTON' | translate }}"
-      (clicked)=="onAdd();">
+      (clicked)="onAdd();">
     </app-empty-state>
   </ng-template>
 
