fix(components): fix according latest clarity version

--- a/src/app/settings/inventory/create-device-modal/create-device-modal.component.html
+++ b/src/app/settings/inventory/create-device-modal/create-device-modal.component.html
@@ -1,41 +1,40 @@
 <clr-modal *ngIf="opened" [(clrModalOpen)]="opened">
   <h3 class="modal-title">{{ 'DEVICECREATEPAGE.TITLE' | translate }}</h3>
   <div class="modal-body">
-    <form (ngSubmit)="setOpened(false); createDevice()" id="createDeviceForm" #createDeviceForm="ngForm" (keyup.enter)="createDeviceForm.form.valid && createDeviceForm.ngSubmit.emit();">
-      <section class="form-block">
+    <form clrForm (ngSubmit)="setOpened(false); createDevice()" id="createDeviceForm" #createDeviceForm="ngForm" (keyup.enter)="createDeviceForm.form.valid && createDeviceForm.ngSubmit.emit();">
+      <section>
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="manufacturer">{{ 'DEVICECREATEPAGE.MANUFACTURER' | translate }}</label>
-          <input [appAutofocus]="opened" type="text" id="manufacturer" name="manufacturer" [(ngModel)]="device.manufacturer" #manufacturer="ngModel"
+          <input clrInput [appAutofocus]="opened" type="text" id="manufacturer" name="manufacturer" [(ngModel)]="device.manufacturer" #manufacturer="ngModel"
             required placeholder="{{ 'DEVICECREATEPAGE.MANUFACTURER_PLACEHOLDER' | translate }}" size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="model">{{ 'DEVICECREATEPAGE.MODEL' | translate }}</label>
-          <input type="text" id="model" name="model" [(ngModel)]="device.model" #model="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.MODEL_PLACEHOLDER' | translate }}"
+          <input clrInput type="text" id="model" name="model" [(ngModel)]="device.model" #model="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.MODEL_PLACEHOLDER' | translate }}"
             size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-select-container>
           <label class="required" for="type">{{ 'DEVICECREATEPAGE.TYPE' | translate }}</label>
-          <div class="select">
-            <select id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
+
+            <select clrSelect id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
               <option *ngFor="let deviceType of typeKeys" [value]="deviceType.value">{{ 'DEVICETYPES.' + deviceType.value | translate }}</option>
             </select>
-          </div>
-        </div>
+        </clr-select-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="os">{{ 'DEVICECREATEPAGE.OS' | translate }}</label>
-          <input type="text" id="os" name="os" [(ngModel)]="device.os" #os="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_PLACEHOLDER' | translate }}"
+          <input clrInput type="text" id="os" name="os" [(ngModel)]="device.os" #os="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_PLACEHOLDER' | translate }}"
             size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="version">{{ 'DEVICECREATEPAGE.OS_VERSION' | translate }}</label>
-          <input type="text" id="version" name="version" [(ngModel)]="device.osVersion" #osVersion="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_VERSION_PLACEHOLDER' | translate }}"
+          <input clrInput type="text" id="version" name="version" [(ngModel)]="device.osVersion" #osVersion="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_VERSION_PLACEHOLDER' | translate }}"
             size="35">
-        </div>
+        </clr-input-container>
 
       </section>
     </form>
