fix(profile): fix typo

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -26,7 +26,7 @@
 
           <clr-input-container>
             <label class="required" for="email">{{ 'USERPROFILEPAGE.EMAIL' | translate }}</label>
-            <input clrrInput type="text" id="email" name="email" [(ngModel)]="profile.email" #email="ngModel" required
+            <input clrInput type="text" id="email" name="email" [(ngModel)]="profile.email" #email="ngModel" required
               placeholder="johndoe@example.com" size="35">
           </clr-input-container>
 
