--- a/src/app/settings/inventory/edit-device-modal/edit-device-modal.component.html
+++ b/src/app/settings/inventory/edit-device-modal/edit-device-modal.component.html
@@ -1,29 +1,29 @@
 <clr-modal *ngIf="opened" [(clrModalOpen)]="opened">
   <h3 class="modal-title">{{ 'DEVICECREATEPAGE.TITLE' | translate }}</h3>
   <div class="modal-body">
-    <form (ngSubmit)="setOpened(false); updateDevice()" id="updateDeviceForm" #updateDeviceForm="ngForm" (keyup.enter)="updateDeviceForm.form.valid && updateDeviceForm.ngSubmit.emit();">
+    <form clrForm (ngSubmit)="setOpened(false); updateDevice()" id="updateDeviceForm" #updateDeviceForm="ngForm" (keyup.enter)="updateDeviceForm.form.valid && updateDeviceForm.ngSubmit.emit();">
       <section class="form-block">
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="manufacturer">{{ 'DEVICECREATEPAGE.MANUFACTURER' | translate }}</label>
-          <input [appAutofocus]="opened" type="text" id="manufacturer" name="manufacturer" [(ngModel)]="device.manufacturer" #manufacturer="ngModel"
+          <input clrInput [appAutofocus]="opened" type="text" id="manufacturer" name="manufacturer" [(ngModel)]="device.manufacturer" #manufacturer="ngModel"
             required placeholder="{{ 'DEVICECREATEPAGE.MANUFACTURER_PLACEHOLDER' | translate }}" size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="model">{{ 'DEVICECREATEPAGE.MODEL' | translate }}</label>
-          <input type="text" id="model" name="model" [(ngModel)]="device.model" #model="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.MODEL_PLACEHOLDER' | translate }}"
+          <input clrInput type="text" id="model" name="model" [(ngModel)]="device.model" #model="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.MODEL_PLACEHOLDER' | translate }}"
             size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-select-container>
           <label class="required" for="type">{{ 'DEVICECREATEPAGE.TYPE' | translate }}</label>
-          <div class="select">
-            <select id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
+
+            <select clrSelect id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
               <option *ngFor="let deviceType of typeKeys" [value]="deviceType.value">{{ 'DEVICETYPES.' + deviceType.value | translate }}</option>
             </select>
-          </div>
-        </div>
+
+        </clr-select-container>
 
         <div class="form-group">
           <label class="required" for="os">{{ 'DEVICECREATEPAGE.OS' | translate }}</label>
