--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -2,18 +2,18 @@
 <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
 
   <!-- background circle -->
-  <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" [attr.stroke]="_options.backgroundColor" stroke-width="3"></circle>
+  <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" [attr.stroke]="mOptions.backgroundColor" stroke-width="3"></circle>
 
   <!-- filled circle -->
-  <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" [attr.stroke]="_options.fillColor"
-    stroke-width="3" [attr.stroke-dasharray]="_percents" stroke-dashoffset="25"></circle>
-  
+  <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" [attr.stroke]="mOptions.fillColor"
+    stroke-width="3" [attr.stroke-dasharray]="mPercents" stroke-dashoffset="25"></circle>
+
   <!-- label -->
   <g class="chart-text">
-    <text x="50%" y="50%" class="chart-number" [attr.fill]="_options.textColor">
+    <text x="50%" y="50%" class="chart-number" [attr.fill]="mOptions.textColor">
       {{ text }}
     </text>
-    <text x="50%" y="50%" class="chart-label" [attr.fill]="_options.subTextColor">
+    <text x="50%" y="50%" class="chart-label" [attr.fill]="mOptions.subTextColor">
       {{ subText }}
     </text>
   </g>
